# backend/swagger-spec.json
@@ -896,6 +896,26 @@
         }
       }
     },
+    "/api/v1/appointments/{id}/assign": {
+      "post": {
+        "operationId": "AppointmentsController_assignProvider",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/v1/appointments/{id}/reschedule": {
       "post": {
         "operationId": "AppointmentsController_rescheduleAppointment",
